--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://frappeframework.com",
   "dependencies": {
     "@editorjs/editorjs": "~2.26.3",
+    "@editorjs/embed": "^2.7.6",
     "@frappe/esbuild-plugin-postcss2": "^0.1.3",
     "@headlessui/vue": "^1.7.16",
     "@popperjs/core": "^2.11.2",
